frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundryvttver9
  labels:
    app: foundryvtt
spec:
  selector:
    matchLabels:
      app: foundryvtt
      tier: foundryvttver9
  replicas: 1
  template:
    metadata:
      labels:
        app: foundryvtt
        tier: foundryvttver9
    spec:
      containers:
      - name: foundryvtt
        image: public.ecr.aws/c8t2w4a7/foundryvttver9:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: foundryvttver9-LoadBalancer
  labels:
    app: foundryvtt
    tier: foundryvttver9
spec:
  # comment or delete the following line if you want to use a LoadBalancer
  #type: NodePort
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: foundryvtt
    tier: foundryvttver9
