nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  selector:
    app: foundryvtt
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
