ingress-helm3.yaml
apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: ingress-helm3
    namespace: default
  spec:
    ingressClassName: nginx
    rules:
      - host: 10.1.10.11
        http:
          paths:
            - backend:
                service:
                  name: foundryvtt-service
                  port:
                    number: 3000
              path: /
              pathType: Prefix
